# i-SAS_Interface

./: .gitignore  README.md  compose.yml  pyproject.toml
isas/: __init__.py  interface.py
isas/base/: base.py
isas/dashboard/: dashboard.py
isas/dashboard/materials/css/: dark.css  white.css
isas/dashboard/qt/: __init__.py  base_content_layout.py  dashboard_app.py  layout.py
isas/preprocess/: __init__.py  create_static_data.py  utils.py
isas/preprocess/sensor_modeling/: __init__.py  create_sensor.py  create_sensor_structural_model_connection.py
isas/preprocess/structural_modeling/: __init__.py  convert_finite_element_model.py  convert_graph_model.py  convert_point_cloud.py  create_finite_element_model.py  create_graph_model.py  create_point_cloud.py  import_finite_element_model.py  import_graph_model.py  import_point_cloud.py
isas/service/: __init__.py  project_builder.py  service.py  socket.py
isas/service/scripts/: construct_project.py  run.py
isas/utils/: dynamic_data_utils.py
tests/cfg/: test_dashboard.yml  test_interface.yml  test_preprocess.yml  test_project.yml
tests/dashboard/: content_layout.py
tests/isas/: test_interface.py
tests/isas/dashboard/: test_dashboard.py
tests/isas/dashboard/qt/: test_base_content_layout.py  test_dashboard_app.py  test_layout.py
tests/isas/preprocess/: test_create_static_data.py  test_sensor_modeling.py  test_structural_modeling.py
tests/isas/service/: test_project_builder.py  test_service.py  test_socket.py
tests/isas/utils/: test_dynamic_data_utils.py
